feat(emacs): setup for haskell

--- a/modules/emacs/README.org
+++ b/modules/emacs/README.org
@@ -155,6 +155,7 @@ undo tree:
 orgmode配置:
 #+BEGIN_SRC emacs-lisp
 (use-package org
+  :ensure nil
   :mode ("\\.org\\'" . org-mode)
   :hook ((org-mode . visual-line-mode)
          (org-mode . my/org-mono-font))
@@ -307,7 +308,9 @@ orgmode配置:
   (org-fast-tag-selection-single-key t)
   ;; 定义了有序属性的标题行也加上 OREDERD 标签
   (org-track-ordered-property-with-tag t)
-  ;; 禁用代碼快中的tab縮進
+  ;; 禁用代碼塊縮進
+  (org-edit-src-content-indentation 0)
+  ;; 禁用代碼塊中的tab縮進
   (org-src-tab-acts-natively nil))
 #+END_SRC
 
@@ -405,8 +408,7 @@ org-appear:
 Enable flycheck:
 #+BEGIN_SRC emacs-lisp
 (use-package flycheck
-  :ensure t
-  :init (global-flycheck-mode))
+  :hook (prog-mode . flycheck-mode))
 #+END_SRC
 
 括號：
@@ -466,6 +468,21 @@ Enable flycheck:
   (define-key corfu-map (kbd "S-<tab>") 'corfu-previous)
   :hook
   (prog-mode . nasy/setup-corfu))
+;; (use-package corfu
+;;   :hook ((prog-mode . corfu-mode)
+;;          (org-mode . corfu-mode)
+;;          (corfu-mode . corfu-popupinfo-mode))
+;;   :custom
+;;   (corfu-cycle t)
+;;   (corfu-auto t)
+;;   (corfu-quit-no-match 'separator)
+;;   (corfu-preselect 'prompt)
+;;   (corfu-on-exact-match nil)
+;;   :config
+;;   (setq completion-cycle-threshold 3)
+;;   (setq tab-always-indent 'complete)
+;;   (define-key corfu-map (kbd "<tab>") 'corfu-next)
+;;   (define-key corfu-map (kbd "S-<tab>") 'corfu-previous))
 #+END_SRC
 
 **** Cape擴展
@@ -473,19 +490,9 @@ Enable flycheck:
 #+BEGIN_SRC emacs-lisp
 (use-package cape
   :init
-  ;; Add `completion-at-point-functions', used by `completion-at-point'.
   (add-to-list 'completion-at-point-functions #'cape-file)
   (add-to-list 'completion-at-point-functions #'cape-dabbrev)
-  (add-to-list 'completion-at-point-functions #'cape-keyword)  ; programming language keyword
-
-  ;; for Eshell:
-  ;; ===========
-  ;; Silence the pcomplete capf, no errors or messages!
-  (advice-add 'pcomplete-completions-at-point :around #'cape-wrap-silent)
-
-  ;; Ensure that pcomplete does not write to the buffer
-  ;; and behaves as a pure `completion-at-point-function'.
-  (advice-add 'pcomplete-completions-at-point :around #'cape-wrap-purify))
+  (add-to-list 'completion-at-point-functions #'cape-keyword))
 #+END_SRC
 
 
@@ -497,6 +504,74 @@ Enable flycheck:
   (completion-styles '(orderless basic))
   (completion-category-defaults nil)
   (completion-category-overrides '((file (styles partial-completion)))))
+#+END_SRC
+
+** 環境（與Nix集成）
+
+讀取nix產生的環境變量，在mac上需要用nix安裝的direnv，才能在後續用envrc讀devShell：
+#+BEGIN_SRC emacs-lisp
+(when (eq system-type 'darwin)
+  ;; 加载你的 Nix shell 配置文件
+  (defun my/load-nix-shell-env ()
+    "Load the environment variables from the nix shell."
+    (interactive)
+    (let ((path-from-shell (replace-regexp-in-string
+                            "[ \t\n]*$"
+                            ""
+                            (shell-command-to-string "/run/current-system/sw/bin/bash --login -i -c 'echo $PATH'"))))
+      (setenv "PATH" path-from-shell)
+      (setq eshell-path-env path-from-shell)
+      (setq exec-path (split-string path-from-shell path-separator))))
+
+  ;; 调用这个函数来加载 Nix shell 环境
+  (my/load-nix-shell-env))
+#+END_SRC
+
+使用[[https://github.com/purcell/envrc][envrc]]加載​~devShell~​：
+#+BEGIN_SRC emacs-lisp
+(use-package envrc
+  :hook (after-init . envrc-global-mode))
+#+END_SRC
+
+
+** LSP
+
+#+BEGIN_SRC emacs-lisp
+(use-package eglot
+  :ensure nil
+  :hook (haskell-mode . eglot-ensure)
+  :init
+  (advice-add 'eglot-ensure :after 'my/eglot-keybindings))
+#+END_SRC
+
+一些快捷鍵：
+#+BEGIN_SRC emacs-lisp
+(defun my/eglot-keybindings ()
+  (define-key evil-normal-state-map "ga" #'eglot-code-actions)
+  (define-key evil-normal-state-map "gd" #'xref-find-definitions)
+  (define-key evil-normal-state-map (kbd "K") #'eldoc))
+#+END_SRC
+
+** 語言
+
+設置treesit用於高亮、結構編輯等：
+#+BEGIN_SRC emacs-lisp
+(use-package treesit-auto
+  :custom
+  (treesit-auto-install 'prompt)
+  :config
+  (treesit-auto-add-to-auto-mode-alist 'all)
+  (global-treesit-auto-mode))
+#+END_SRC
+
+*** Haskell
+
+#+BEGIN_SRC emacs-lisp
+(use-package haskell-mode
+  :defer t
+  :hook ((haskell-mode . interactive-haskell-mode)
+         (haskell-mode . haskell-indentation-mode)
+         (haskell-mode . haskell-auto-insert-module-template)))
 #+END_SRC
 
 * minibuffer增強
