--- a/modules/emacs/README.org
+++ b/modules/emacs/README.org
@@ -563,10 +563,6 @@ Enable flymake:
 
 * minibuffer增強
 
-#+BEGIN_SRC emacs-lisp
-(setq enable-recursive-minibuffers t)
-#+END_SRC
-
 ** 命令行歷史
 
 #+BEGIN_SRC emacs-lisp
@@ -587,8 +583,7 @@ Enable flymake:
 
 #+BEGIN_SRC emacs-lisp
 (use-package vertico
-  :init
-  (vertico-mode)
+  :hook (after-init . my/minibuffer-config)
   :config
   ;; Different scroll margin
   (setq vertico-scroll-margin 0)
@@ -600,12 +595,38 @@ Enable flymake:
   (setq vertico-resize t)
 
   ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
-  (setq vertico-cycle t)
-  :general
-  (:keymaps 'vertico-map
-            "C-j" 'vertico-next
-            "C-k" 'vertico-previous
-            "C-f" 'vertico-exit))
+  (setq vertico-cycle t))
+#+END_SRC
+
+一些額外配置：
+
+#+BEGIN_SRC emacs-lisp
+;; A few more useful configurations...
+(defun my/minibuffer-config ()
+  (vertico-mode)
+  ;; Add prompt indicator to `completing-read-multiple'.
+  ;; We display [CRM<separator>], e.g., [CRM,] if the separator is a comma.
+  (defun crm-indicator (args)
+    (cons (format "[CRM%s] %s"
+                  (replace-regexp-in-string
+                   "\\`\\[.*?]\\*\\|\\[.*?]\\*\\'" ""
+                   crm-separator)
+                  (car args))
+          (cdr args)))
+  (advice-add #'completing-read-multiple :filter-args #'crm-indicator)
+
+  ;; Do not allow the cursor in the minibuffer prompt
+  (setq minibuffer-prompt-properties
+        '(read-only t cursor-intangible t face minibuffer-prompt))
+  (add-hook 'minibuffer-setup-hook #'cursor-intangible-mode)
+
+  ;; Support opening new minibuffers from inside existing minibuffers.
+  (setq enable-recursive-minibuffers t)
+
+  ;; Emacs 28 and newer: Hide commands in M-x which do not work in the current
+  ;; mode.  Vertico commands are hidden in normal buffers. This setting is
+  ;; useful beyond Vertico.
+  (setq read-extended-command-predicate #'command-completion-default-include-p))
 #+END_SRC
 
 ** marginalia
